--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosferatu500/react-sortable-tree",
-  "version": "4.0.0-beta.11",
+  "version": "4.0.0-beta.12",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -18,19 +18,17 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "prebuild": "yarn clean && yarn lint",
+    "prebuild": "yarn clean",
     "build": "rollup -c",
     "build:storybook": "build-storybook -o build",
     "clean": "rimraf dist",
     "clean:storybook": "rimraf build",
     "lint": "eslint --fix '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
-    "prepublishOnly": "yarn test && yarn build",
+    "prepublishOnly": "yarn build",
     "release": "standard-version",
-    "test": "jest --env=jsdom",
-    "test:watch": "jest --watchAll",
     "storybook": "start-storybook -p ${PORT:-3001} -h 0.0.0.0",
     "postbuild": "yarn copy",
-    "copy": "rimraf dist/tests.d.ts && shx cp -r dist/*.d.ts dist/esm && shx mv dist/* dist && shx cp package.json readme.md LICENSE dist && json -I -f dist/package.json -e \"this.private=false; this.devDependencies=undefined; this.optionalDependencies=undefined; this.scripts=undefined; this.prettier=undefined; this.jest=undefined; this['lint-staged']=undefined;\"",
+    "copy": "rimraf dist/tests.d.ts && shx cp -r dist/*.d.ts dist/esm && shx mv dist/* dist && shx cp package.json readme.md LICENSE dist && json -I -f dist/package.json -e \"this.private=false; this.devDependencies=undefined; this.optionalDependencies=undefined; this.scripts=undefined; this.prettier=undefined; this['lint-staged']=undefined;\"",
     "publish:alpha": "cd dist && npm publish --tag alpha",
     "publish:beta": "cd dist && npm publish --tag beta",
     "publish:release": "cd dist && npm publish"
@@ -65,122 +63,57 @@
   ],
   "license": "MIT",
   "bugs": "https://github.com/nosferatu500/react-sortable-tree/issues",
-  "jest": {
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest",
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsconfig": {
-          "target": "es2015",
-          "jsx": "react-jsx"
-        }
-      }
-    },
-    "setupFilesAfterEnv": [
-      "./node_modules/jest-enzyme/lib/index.js"
-    ],
-    "setupFiles": [
-      "./test-config/shim.js",
-      "./test-config/test-setup.js"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "json",
-      "ts",
-      "tsx"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "modulePathIgnorePatterns": [
-      "dist"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "^dnd-core$": "dnd-core/dist/cjs",
-      "^react-dnd$": "react-dnd/dist/cjs",
-      "^react-dnd-html5-backend$": "react-dnd-html5-backend/dist/cjs",
-      "^react-dnd-touch-backend$": "react-dnd-touch-backend/dist/cjs",
-      "^react-dnd-test-backend$": "react-dnd-test-backend/dist/cjs",
-      "^react-dnd-test-utils$": "react-dnd-test-utils/dist/cjs"
-    },
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,ts,tsx}",
-      "tests/**/*.{js,ts,tsx}"
-    ]
-  },
   "dependencies": {
     "@nosferatu500/react-dnd-scrollzone": "^2.0.4",
     "lodash.isequal": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "react-virtuoso": "^2.2.4"
+    "react-virtuoso": "^2.2.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/eslint-parser": "^7.15.8",
-    "@babel/helper-module-imports": "^7.15.4",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/types": "^7.15.6",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.0",
+    "@babel/helper-module-imports": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/types": "^7.16.0",
     "@nosferatu500/theme-file-explorer": "^3.0.10",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@storybook/addon-storyshots": "^6.3.12",
     "@storybook/addons": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@storybook/theming": "^6.3.12",
-    "@testing-library/react": "^12.1.2",
     "@types/babel-plugin-macros": "^2.8.5",
-    "@types/enzyme": "^3.10.10",
-    "@types/jest": "^27.0.2",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/react": "^17.0.32",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "acorn-jsx": "^5.3.2",
     "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-tester": "^10.1.0",
-    "enzyme": "^3.11.0",
-    "esbuild": "^0.13.9",
-    "eslint": "^8.1.0",
+    "esbuild": "^0.13.12",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
-    "jest": "^27.3.1",
-    "jest-enzyme": "^7.1.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
     "json": "^11.0.0",
-    "prop-types": "^15.7.2",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dnd-test-backend": "^14.0.1",
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.58.0",
+    "rollup": "^2.59.0",
     "rollup-plugin-esbuild": "^4.6.0",
     "rollup-plugin-postcss": "^4.0.1",
     "shx": "^0.3.3",
-    "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   },
