--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosferatu500/react-sortable-tree",
-  "version": "4.0.0-beta.12",
+  "version": "4.0.0",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -23,7 +23,7 @@
     "build:storybook": "build-storybook -o build",
     "clean": "rimraf dist",
     "clean:storybook": "rimraf build",
-    "lint": "eslint --fix '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
+    "lint": "eslint '*.{js,json}' '{src,tests}/**/*.{ts,tsx}'",
     "prepublishOnly": "yarn build",
     "release": "standard-version",
     "storybook": "start-storybook -p ${PORT:-3001} -h 0.0.0.0",
@@ -68,11 +68,11 @@
     "lodash.isequal": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "react-virtuoso": "^2.2.6"
+    "react-virtuoso": "^2.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/helper-module-imports": "^7.16.0",
     "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
@@ -88,20 +88,24 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "acorn-jsx": "^5.3.2",
     "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.13.12",
+    "esbuild": "^0.13.13",
     "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-airbnb-typescript": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-array-func": "^3.1.7",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint-plugin-unicorn": "^38.0.1",
     "json": "^11.0.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
@@ -110,7 +114,7 @@
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.59.0",
+    "rollup": "^2.60.0",
     "rollup-plugin-esbuild": "^4.6.0",
     "rollup-plugin-postcss": "^4.0.1",
     "shx": "^0.3.3",
@@ -126,7 +130,7 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not ie",
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
