--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "license": "MIT",
   "bugs": "https://github.com/nosferatu500/react-sortable-tree/issues",
   "dependencies": {
-    "@nosferatu500/react-dnd-scrollzone": "^2.0.4",
+    "@nosferatu500/react-dnd-scrollzone": "^2.0.5",
     "lodash.isequal": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
@@ -81,6 +81,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@storybook/theming": "^6.3.12",
@@ -91,6 +92,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "acorn-jsx": "^5.3.2",
+    "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
     "esbuild": "^0.13.13",
     "eslint": "^8.2.0",
