--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@nosferatu500/react-sortable-tree",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
   "types": "./index.d.ts",
   "exports": {
     "./package.json": "./package.json",
+    "./style.css": "./style.css",
     ".": {
       "types": "./index.d.ts",
       "module": "./esm/index.js",
@@ -68,7 +69,7 @@
     "lodash.isequal": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "react-virtuoso": "^2.2.7"
+    "react-virtuoso": "^2.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -82,21 +83,21 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.3.12",
-    "@storybook/react": "^6.3.12",
-    "@storybook/theming": "^6.3.12",
+    "@storybook/addons": "^6.4.0",
+    "@storybook/react": "^6.4.0",
+    "@storybook/theming": "^6.4.0",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/react": "^17.0.36",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.0",
     "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.13.15",
+    "esbuild": "^0.14.0",
     "eslint": "^8.3.0",
-    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-airbnb": "^19.0.1",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -109,16 +110,16 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unicorn": "^39.0.0",
     "json": "^11.0.0",
-    "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
+    "postcss": "^8.4.4",
+    "prettier": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.60.0",
+    "rollup": "^2.60.1",
     "rollup-plugin-esbuild": "^4.7.2",
-    "rollup-plugin-postcss": "^4.0.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "shx": "^0.3.3",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2"
