--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosferatu500/react-sortable-tree",
-  "version": "4.0.4",
+  "version": "4.0.5",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -67,35 +67,35 @@
   "dependencies": {
     "@nosferatu500/react-dnd-scrollzone": "^2.0.7",
     "lodash.isequal": "^4.5.0",
-    "react-dnd": "^14.0.5",
+    "react-dnd": "14.0.4",
     "react-dnd-html5-backend": "^14.1.0",
-    "react-virtuoso": "^2.4.1"
+    "react-virtuoso": "^2.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.10",
+    "@babel/core": "^7.16.12",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/helper-module-imports": "^7.16.7",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/types": "^7.16.8",
-    "@nosferatu500/theme-file-explorer": "^3.0.13",
+    "@nosferatu500/theme-file-explorer": "^3.0.14",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.4.13",
-    "@storybook/react": "^6.4.13",
-    "@storybook/theming": "^6.4.13",
+    "@storybook/addons": "^6.4.14",
+    "@storybook/react": "^6.4.14",
+    "@storybook/theming": "^6.4.14",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/lodash.isequal": "^4.5.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.2",
     "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.14.12",
+    "esbuild": "^0.14.14",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -117,7 +117,7 @@
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.64.0",
+    "rollup": "^2.66.1",
     "rollup-plugin-esbuild": "^4.8.2",
     "rollup-plugin-postcss": "^4.0.2",
     "shx": "^0.3.4",
@@ -126,7 +126,7 @@
   },
   "peerDependencies": {
     "react": ">=17.0.2",
-    "react-dnd": ">=14.0.5",
+    "react-dnd": "<=14.0.4",
     "react-dom": ">=17.0.2"
   },
   "browserslist": {
