--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "publish:release": "cd dist && npm publish"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "prettier": {
     "semi": false,
@@ -69,65 +69,65 @@
     "lodash.isequal": "^4.5.0",
     "react-dnd": "14.0.4",
     "react-dnd-html5-backend": "^14.1.0",
-    "react-virtuoso": "^2.8.5"
+    "react-virtuoso": "^2.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
+    "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/helper-module-imports": "^7.16.7",
     "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/types": "^7.17.0",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/types": "^7.17.10",
     "@nosferatu500/theme-file-explorer": "^3.0.16",
     "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.4.19",
-    "@storybook/react": "^6.4.19",
-    "@storybook/theming": "^6.4.19",
+    "@storybook/addons": "^6.4.22",
+    "@storybook/react": "^6.4.22",
+    "@storybook/theming": "^6.4.22",
     "@types/babel-plugin-macros": "^2.8.5",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@types/lodash.isequal": "^4.5.6",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "acorn-jsx": "^5.3.2",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.7",
     "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.14.28",
-    "eslint": "^8.12.0",
+    "esbuild": "^0.14.38",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-sonarjs": "^0.12.0",
-    "eslint-plugin-storybook": "^0.5.7",
-    "eslint-plugin-unicorn": "^41.0.1",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "eslint-plugin-storybook": "^0.5.11",
+    "eslint-plugin-unicorn": "^42.0.0",
     "json": "^11.0.0",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.1",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.70.1",
-    "rollup-plugin-esbuild": "^4.8.2",
+    "rollup": "^2.71.1",
+    "rollup-plugin-esbuild": "^4.9.1",
     "rollup-plugin-postcss": "^4.0.2",
     "shx": "^0.3.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
     "react": ">=17.0.2",
-    "react-dnd": "<=14.0.4",
+    "react-dnd": ">=14.0.4",
     "react-dom": ">=17.0.2"
   },
   "browserslist": {
