--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosferatu500/react-sortable-tree",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -65,38 +65,37 @@
   "license": "MIT",
   "bugs": "https://github.com/nosferatu500/react-sortable-tree/issues",
   "dependencies": {
-    "@nosferatu500/react-dnd-scrollzone": "^2.0.8",
+    "@nosferatu500/react-dnd-scrollzone": "^2.0.9",
     "lodash.isequal": "^4.5.0",
-    "react-dnd": "14.0.4",
+    "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
-    "react-virtuoso": "^2.11.0"
+    "react-virtuoso": "^2.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
+    "@babel/core": "^7.18.0",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/helper-module-imports": "^7.16.7",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/types": "^7.17.10",
-    "@nosferatu500/theme-file-explorer": "^3.0.16",
+    "@babel/plugin-transform-react-jsx": "^7.17.12",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/types": "^7.18.0",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.4.22",
-    "@storybook/react": "^6.4.22",
-    "@storybook/theming": "^6.4.22",
+    "@storybook/addons": "^6.5.3",
+    "@storybook/react": "^6.5.3",
+    "@storybook/theming": "^6.5.3",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/lodash.isequal": "^4.5.6",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.16",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.7",
     "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.14.38",
-    "eslint": "^8.14.0",
+    "esbuild": "^0.14.39",
+    "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -105,20 +104,20 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-sonarjs": "^0.13.0",
-    "eslint-plugin-storybook": "^0.5.11",
+    "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-unicorn": "^42.0.0",
     "json": "^11.0.0",
-    "postcss": "^8.4.13",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.71.1",
+    "rollup": "^2.74.1",
     "rollup-plugin-esbuild": "^4.9.1",
     "rollup-plugin-postcss": "^4.0.2",
     "shx": "^0.3.4",
