Use esm source as module

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.1.4",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
+  "module": "./esm/index.js",
   "types": "./index.d.ts",
   "exports": {
     "./package.json": "./package.json",
