--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosferatu500/react-sortable-tree",
-  "version": "4.2.2",
+  "version": "4.3.0",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "main": "./index.js",
   "module": "./esm/index.js",
@@ -70,33 +70,33 @@
     "lodash.isequal": "^4.5.0",
     "react-dnd": "14.0.4",
     "react-dnd-html5-backend": "^14.1.0",
-    "react-virtuoso": "^2.19.1"
+    "react-virtuoso": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.21.0",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/helper-module-imports": "^7.18.6",
-    "@babel/plugin-transform-react-jsx": "^7.20.13",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
-    "@babel/types": "^7.20.7",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@babel/types": "^7.21.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/theming": "^6.5.16",
-    "@types/babel-plugin-macros": "^2.8.5",
+    "@types/babel-plugin-macros": "^3.1.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/react": "^16.14.35",
-    "@types/react-dom": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@types/react-dom": "^17.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.17.5",
-    "eslint": "^8.33.0",
+    "esbuild": "^0.17.10",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
@@ -108,27 +108,27 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.18.0",
-    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-unicorn": "^45.0.2",
     "json": "^11.0.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
-    "rimraf": "^4.1.2",
-    "rollup": "^2.79.1",
-    "rollup-plugin-esbuild": "^4.10.3",
+    "rimraf": "^4.2.0",
+    "rollup": "^3.18.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-postcss": "^4.0.2",
     "shx": "^0.3.4",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "react": ">=17.0.2",
+    "react": "^17.0.0 || ^18.0.0",
     "react-dnd": "14.0.4",
-    "react-dom": ">=17.0.2"
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "browserslist": {
     "production": [
