--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@nosferatu500/react-sortable-tree",
+  "name": "@yixuan-liu-afe/react-sortable-tree",
   "version": "4.4.0",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
-  "homepage": "https://nosferatu500.github.io/react-sortable-tree",
+  "homepage": "https://frontend-collective.github.io/react-sortable-tree/",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nosferatu500/react-sortable-tree"
+    "url": "https://github.com/yixuan-liu-afe/react-sortable-tree"
   },
   "keywords": [
     "react",
@@ -45,7 +45,7 @@
   ],
   "author": "Chris Fritz",
   "license": "MIT",
-  "bugs": "https://github.com/nosferatu500/react-sortable-tree/issues",
+  "bugs": "https://github.com/yixuan-liu-afe/react-sortable-tree/issues",
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
